k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: desaklik
---
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring
