k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api-service
  namespace: desaklik
spec:
  selector:
    app: api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: web-service
  namespace: desaklik
spec:
  selector:
    app: web
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
